--- a/Nonograms.Portable/Nonograms.Portable.csproj
+++ b/Nonograms.Portable/Nonograms.Portable.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Model\NonogramInfo.cs" />
     <Compile Include="Model\NonogramsRepository.cs" />
+    <Compile Include="Model\Observable2DArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\NonogramPageViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModelLocator.cs" />
