--- a/Nonograms.Portable/Nonograms.Portable.csproj
+++ b/Nonograms.Portable/Nonograms.Portable.csproj
@@ -35,11 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Enums\Enums.cs" />
-    <Compile Include="Model\ExtensionMethods.cs" />
     <Compile Include="Model\NonogramInfo.cs" />
     <Compile Include="Model\NonogramsRepository.cs" />
-    <Compile Include="Model\Observable2DArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\LevelsPageViewModel.cs" />
     <Compile Include="ViewModel\NonogramPageViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModelLocator.cs" />
   </ItemGroup>
@@ -64,6 +63,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Data\Nonogram6x4.json" />
     <EmbeddedResource Include="Data\Nonogram15x15.json" />
+    <EmbeddedResource Include="Data\AllNonograms.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
