--- a/Nonograms.Portable/Nonograms.Portable.csproj
+++ b/Nonograms.Portable/Nonograms.Portable.csproj
@@ -40,7 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\LevelsPageViewModel.cs" />
     <Compile Include="ViewModel\BaseMainPageViewModel.cs" />
-    <Compile Include="ViewModel\NonogramPageViewModel.cs" />
+    <Compile Include="ViewModel\BaseNonogramPageViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModelLocator.cs" />
     <Compile Include="ViewModel\TutorialPageViewModel.cs" />
   </ItemGroup>
