--- a/Nonograms.Portable/Nonograms.Portable.csproj
+++ b/Nonograms.Portable/Nonograms.Portable.csproj
@@ -35,7 +35,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Enums\Enums.cs" />
-    <Compile Include="Model\NonogramInfo.cs" />
+    <Compile Include="Model\Database\DatabaseContext.cs" />
+    <Compile Include="Model\Database\NonogramInfo.cs" />
+    <Compile Include="Model\DTO\NonogramInfo.cs" />
     <Compile Include="Model\NonogramsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\LevelsPageViewModel.cs" />
