--- a/Nonograms/Nonograms.csproj
+++ b/Nonograms/Nonograms.csproj
@@ -67,7 +67,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <NoWarn>;2008</NoWarn>
     <DebugType>full</DebugType>
@@ -106,6 +106,8 @@
     <Compile Include="CustomControls\NonogramControl.xaml.cs">
       <DependentUpon>NonogramControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\Database\DatabaseContext.cs" />
+    <Compile Include="Model\Database\NonogramInfo.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
     <Compile Include="ViewModel\NonogramPageViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
