--- a/Nonograms/project.json
+++ b/Nonograms/project.json
@@ -1,5 +1,7 @@
 ﻿{
   "dependencies": {
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "MvvmLightLibs": "5.3.0",
     "Newtonsoft.Json": "8.0.3"
